[gd_scene load_steps=8 format=2]

[ext_resource path="res://Miriya/Object_Scripts/flame.gd" type="Script" id=1]
[ext_resource path="res://Miriya/GroundImages/flame_animation.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[node name="flame" type="RigidBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 0.838541, 0.869792 )
frames = SubResource( 4 )
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Burn_Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_flame_body_entered"]
[connection signal="timeout" from="Burn_Timer" to="." method="_on_Burn_Timer_timeout"]
